Fix social on mobile

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -179,7 +179,6 @@
       transform: scale(0.9);
     }
 
-    overflow-x: hidden;
     width: 100%;
   }
 }
